toolkit/themes/osx/global/nativescrollbars.css
namespace
url
(
"
http
:
/
/
www
.
mozilla
.
org
/
keymaster
/
gatekeeper
/
there
.
is
.
only
.
xul
"
)
;
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
scrollbar
{
-
moz
-
appearance
:
scrollbar
;
-
moz
-
binding
:
url
(
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
)
;
cursor
:
default
;
background
-
color
:
white
;
}
html
|
select
[
size
]
:
not
(
[
size
=
"
0
"
]
)
:
not
(
[
size
=
"
1
"
]
)
>
scrollbar
html
|
select
[
multiple
]
>
scrollbar
{
-
moz
-
appearance
:
scrollbar
-
small
;
}
media
all
and
(
-
moz
-
overlay
-
scrollbars
)
{
scrollbar
{
position
:
relative
;
z
-
index
:
2147483647
;
}
scrollbar
:
not
(
[
active
=
"
true
"
]
)
scrollbar
[
disabled
=
"
true
"
]
{
visibility
:
hidden
;
}
scrollbar
[
orient
=
"
vertical
"
]
{
-
moz
-
margin
-
start
:
-
16px
;
}
scrollbar
[
orient
=
"
horizontal
"
]
{
margin
-
top
:
-
16px
;
}
}
slider
{
-
moz
-
appearance
:
scrollbartrack
-
horizontal
;
}
slider
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbartrack
-
vertical
;
}
thumb
{
-
moz
-
appearance
:
scrollbarthumb
-
horizontal
;
}
thumb
[
orient
=
"
vertical
"
]
{
-
moz
-
appearance
:
scrollbarthumb
-
vertical
;
}
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
right
;
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
increment
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
down
;
}
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
left
;
}
scrollbar
[
orient
=
"
vertical
"
]
>
scrollbarbutton
[
type
=
"
decrement
"
]
{
-
moz
-
appearance
:
scrollbarbutton
-
up
;
}
scrollcorner
{
-
moz
-
binding
:
url
(
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
-
base
)
;
width
:
16px
;
cursor
:
default
;
background
-
color
:
white
;
}
media
print
{
html
|
div
scrollbar
{
-
moz
-
appearance
:
scrollbar
;
-
moz
-
binding
:
url
(
chrome
:
/
/
global
/
content
/
bindings
/
scrollbar
.
xml
#
scrollbar
)
;
cursor
:
default
;
}
}

