Bug 868416: Keep overlay scrollbars the same size irrespective of the current document zoom level. r=roc
UltraBlame original commit: 32e423bcd38175c287ed858a3d2e57763b14104e

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -191,43 +191,6 @@ visibility
 hidden
 ;
 }
-scrollbar
-[
-orient
-=
-"
-vertical
-"
-]
-{
--
-moz
--
-margin
--
-start
-:
--
-16px
-;
-}
-scrollbar
-[
-orient
-=
-"
-horizontal
-"
-]
-{
-margin
--
-top
-:
--
-16px
-;
-}
 }
 slider
 {
